change member activity field record
